// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`updateOutputsGraphicData > should calculate correct dimensions and position 1`] = `
{
  "calibratedMax": 0,
  "calibratedMin": 0,
  "height": 16,
  "id": "output1",
  "width": 16,
  "x": 76,
  "y": 16,
}
`;

exports[`updateOutputsGraphicData > should handle multiple outputs 1`] = `
[
  [
    "0",
    {
      "calibratedMax": 0,
      "calibratedMin": 0,
      "height": 16,
      "id": "output1",
      "width": 16,
      "x": 76,
      "y": 16,
    },
  ],
  [
    "1",
    {
      "calibratedMax": 0,
      "calibratedMin": 0,
      "height": 16,
      "id": "output2",
      "width": 16,
      "x": 76,
      "y": 32,
    },
  ],
]
`;

exports[`updateOutputsGraphicData > should position outputs at correct y coordinate based on line number 1`] = `{}`;
